# llamaduck

./: CONTRIBUTING.md  README.md  llamaduck  pyproject.toml  setup.py
docs/: api.md  examples.md  index.html  index.md  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html  index.md
examples/: advanced_usage.py  basic_usage.py
llamaduck_pro/: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  setup.py
llamaduck_pro/.github/: dependabot.yml
llamaduck_pro/.github/workflows/: ci.yml  dependency-review.yml  release.yml
llamaduck_pro/docs/: README.md
llamaduck_pro/docs/images/: README.md
llamaduck_pro/llamaduck/: __init__.py  cli.py  search.py
llamaduck_pro/tests/: __init__.py  test_cli.py  test_search.py
src/llamaduck/: __init__.py
tests/: __init__.py  test_client.py
